# pybo

./: experiment_class.py  gitignore  pyproject.toml  readme.md  requirements.txt  test.py
bak/: bayesian_optimization.py
bayesian_optimization/: acquisition_functions.py  activation_functions.py  bay_opt_drawing_from_gp_prior.py  bayesian_optimization.py  developing_multi_objective_bayesian_optimizaton.py  kernel_functions.py  latin_hypercube_sampling.py  multi_objective_bayesian_optimization.py  multi_objective_bayesian_optimizaton.py  objective_functions.py
bayesian_optimization_for_cpu/: acquisition_functions.py  bayesian_optimization.py  enums.py  helpers.py  kernel_functions.py  mobo.py  multi_objective_bayesian_optimization.py  plotter.py  validators.py
bayesian_optimization_for_gpu/: constraints.py  enums.py  mobo_from_r3_to_r2_gpu.py  mobo_gpu.py  mobo_gpu_bak.py  objectives.py  samplers.py  utils.py  validators.py
data/: 2d_dataset.csv  mobo.csv
demos/: bayesian_optimization.py  gaussian_process.py  mle_for_gaussian_model.py  mle_for_multivariate_gaussian_model.py
documents/: acquisition_function.md  bayes_theorem.md  bayesian_inference.md  bayesian_optimization.md  conditional_probability.md  conjugate_priors.md  electric_discharge_physics.md  formaco.md  gaussian_process.md  gaussian_processes.md  hazard_function.md  introduction.md  joint_conditional_marginal_probabilities.md  joint_distribution.md  kernel_functions.md  latin_hypercube_sampling.md  law_of_total_probability.md  list_of_symbols.md  maximum_likelihood_estimation.md  sparc.md  task1.md  (+4 more)
(+63 files in other folders)
