[project]
name = "pyBO"
version = "0.1.0"
description = "A Python library for Multi-Objective Bayesian Optimization based on BoTorch"
authors = [{ name="Davide Beretta", email="mail.davide.beretta+github@gmail.com" }]
license = {text = "MIT"}
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pybo*", "utils*"]